Создает страницу Портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="">Студия</a></li>
+          <li><a href="./index.html">Студия</a></li>
           <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
@@ -23,7 +24,72 @@
       </ul>
     </header>
 
-    <main></main>
+    <main>
+      <section>
+        <h1>Наши проекты</h1>
+        <!-- Заголовок скроем стилями -->
+        <ul>
+          <li><a href="">Все</a></li>
+          <li><a href="">Веб-сайты</a></li>
+          <li><a href="">Приложения</a></li>
+          <li><a href="">Дизайн</a></li>
+          <li><a href="">Маркетинг</a></li>
+        </ul>
+        <ul>
+          <li>
+            <img
+              src="./images/portfolio/technokryak.jpg"
+              alt="Экран ноутбука с карточками сотрудников"
+            />
+            <p>Технокряк</p>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/new-orlean.jpg" alt="Два баскетболитса с мячем" />
+            <p>Постер New Orlean vs Golden Star</p>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/seafood.jpg" alt="Постер ресторана" />
+            <p>Ресторан Seafood</p>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/prime.jpg" alt="Наушники" />
+            <p>Проект Prime</p>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/boxes.jpg" alt="<Белая и оранжевая коробка>" />
+            <p>Проект Boxes</p>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/inspiration.jpg" alt="Сайт на экране монитора" />
+            <p>Inspiration has no Borders</p>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/limited-edition.jpg" alt="Раскрытый журнал" />
+            <p>Издание Limited Edition</p>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/lab.jpg" alt="<Бирка с логотипом>" />
+            <p>Проект LAB</p>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/growing-business.jpg"
+              alt="Руки на клавиатуре открытого ноутбука"
+            />
+            <p>Growing Business</p>
+            <p>Приложение</p>
+          </li>
+        </ul>
+      </section>
+    </main>
 
     <footer>
       <a href="">WebStudio</a>
