Вносит правки в разметку

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,62 +29,72 @@
         <h1>Наши проекты</h1>
         <!-- Заголовок скроем стилями -->
         <ul>
-          <li><a href="">Все</a></li>
-          <li><a href="">Веб-сайты</a></li>
-          <li><a href="">Приложения</a></li>
-          <li><a href="">Дизайн</a></li>
-          <li><a href="">Маркетинг</a></li>
+          <li><button type="button" href="">Все</button></li>
+          <li><button type="button" href="">Веб-сайты</button></li>
+          <li><button type="button" href="">Приложения</button></li>
+          <li><button type="button" href="">Дизайн</button></li>
+          <li><button type="button" href="">Маркетинг</button></li>
         </ul>
         <ul>
           <li>
             <img
               src="./images/portfolio/technokryak.jpg"
               alt="Экран ноутбука с карточками сотрудников"
+              width="370"
             />
-            <p>Технокряк</p>
+            <h2>Технокряк</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
-            <img src="./images/portfolio/new-orlean.jpg" alt="Два баскетболитса с мячем" />
-            <p>Постер New Orlean vs Golden Star</p>
+            <img
+              src="./images/portfolio/new-orlean.jpg"
+              alt="Два баскетболитса с мячем"
+              width="370"
+            />
+            <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
             <p>Дизайн</p>
           </li>
           <li>
-            <img src="./images/portfolio/seafood.jpg" alt="Постер ресторана" />
-            <p>Ресторан Seafood</p>
+            <img src="./images/portfolio/seafood.jpg" alt="Постер ресторана" width="370" />
+            <h2>Ресторан <span lang="en">Seafood</span></h2>
             <p>Приложение</p>
           </li>
           <li>
-            <img src="./images/portfolio/prime.jpg" alt="Наушники" />
-            <p>Проект Prime</p>
+            <img src="./images/portfolio/prime.jpg" alt="Наушники" width="370" />
+            <h2>Проект <span lang="en">Prime</span></h2>
             <p>Маркетинг</p>
           </li>
           <li>
-            <img src="./images/portfolio/boxes.jpg" alt="<Белая и оранжевая коробка>" />
-            <p>Проект Boxes</p>
+            <img src="./images/portfolio/boxes.jpg" alt="<Белая и оранжевая коробка>" width="370" />
+            <h2>Проект <span lang="en">Boxes</span></h2>
             <p>Приложение</p>
           </li>
           <li>
-            <img src="./images/portfolio/inspiration.jpg" alt="Сайт на экране монитора" />
-            <p>Inspiration has no Borders</p>
+            <img
+              src="./images/portfolio/inspiration.jpg"
+              alt="Сайт на экране монитора"
+              width="370"
+            />
+            <h2 lang="en">Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
-            <img src="./images/portfolio/limited-edition.jpg" alt="Раскрытый журнал" />
-            <p>Издание Limited Edition</p>
+            <img src="./images/portfolio/limited-edition.jpg" alt="Раскрытый журнал" width="370" />
+            <h2>Издание Limited Edition</h2>
             <p>Дизайн</p>
           </li>
           <li>
-            <img src="./images/portfolio/lab.jpg" alt="<Бирка с логотипом>" />
-            <p>Проект LAB</p>
+            <img src="./images/portfolio/lab.jpg" alt="<Бирка с логотипом>" width="370" />
+            <h2>Проект <span lang="en">LAB</span></h2>
             <p>Маркетинг</p>
           </li>
           <li>
             <img
               src="./images/portfolio/growing-business.jpg"
               alt="Руки на клавиатуре открытого ноутбука"
+              width="370"
             />
-            <p>Growing Business</p>
+            <h2 lang="en">Growing Business</h2>
             <p>Приложение</p>
           </li>
         </ul>
