Оборачивает карточки портфолио в ссылки

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
@@ -12,7 +18,7 @@
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="./index.html">Студия</a></li>
+          <li><a href="">Студия</a></li>
           <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
@@ -37,65 +43,91 @@
         </ul>
         <ul>
           <li>
-            <img
-              src="./images/portfolio/technokryak.jpg"
-              alt="Экран ноутбука с карточками сотрудников"
-              width="370"
-            />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <a href=""
+              ><img
+                src="./images/portfolio/technokryak.jpg"
+                alt="Экран ноутбука с карточками сотрудников"
+                width="370"
+              />
+              <h2>Технокряк</h2>
+              <p>Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/new-orlean.jpg"
-              alt="Два баскетболитса с мячем"
-              width="370"
-            />
-            <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-            <p>Дизайн</p>
+            <a href=""
+              ><img
+                src="./images/portfolio/new-orlean.jpg"
+                alt="Два баскетболитса с мячем"
+                width="370"
+              />
+              <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+              <p>Дизайн</p>
+            </a>
           </li>
           <li>
-            <img src="./images/portfolio/seafood.jpg" alt="Постер ресторана" width="370" />
-            <h2>Ресторан <span lang="en">Seafood</span></h2>
-            <p>Приложение</p>
+            <a href="">
+              <img src="./images/portfolio/seafood.jpg" alt="Постер ресторана" width="370" />
+              <h2>Ресторан <span lang="en">Seafood</span></h2>
+              <p>Приложение</p>
+            </a>
           </li>
           <li>
-            <img src="./images/portfolio/prime.jpg" alt="Наушники" width="370" />
-            <h2>Проект <span lang="en">Prime</span></h2>
-            <p>Маркетинг</p>
+            <a href=""
+              ><img src="./images/portfolio/prime.jpg" alt="Наушники" width="370" />
+              <h2>Проект <span lang="en">Prime</span></h2>
+              <p>Маркетинг</p>
+            </a>
           </li>
           <li>
-            <img src="./images/portfolio/boxes.jpg" alt="<Белая и оранжевая коробка>" width="370" />
-            <h2>Проект <span lang="en">Boxes</span></h2>
-            <p>Приложение</p>
+            <a href="">
+              <img
+                src="./images/portfolio/boxes.jpg"
+                alt="<Белая и оранжевая коробка>"
+                width="370"
+              />
+              <h2>Проект <span lang="en">Boxes</span></h2>
+              <p>Приложение</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/inspiration.jpg"
-              alt="Сайт на экране монитора"
-              width="370"
-            />
-            <h2 lang="en">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <a href="">
+              <img
+                src="./images/portfolio/inspiration.jpg"
+                alt="Сайт на экране монитора"
+                width="370"
+              />
+              <h2 lang="en">Inspiration has no Borders</h2>
+              <p>Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <img src="./images/portfolio/limited-edition.jpg" alt="Раскрытый журнал" width="370" />
-            <h2>Издание Limited Edition</h2>
-            <p>Дизайн</p>
+            <a href="">
+              <img
+                src="./images/portfolio/limited-edition.jpg"
+                alt="Раскрытый журнал"
+                width="370"
+              />
+              <h2>Издание <span lang="en">Limited Edition</span></h2>
+              <p>Дизайн</p>
+            </a>
           </li>
           <li>
-            <img src="./images/portfolio/lab.jpg" alt="<Бирка с логотипом>" width="370" />
-            <h2>Проект <span lang="en">LAB</span></h2>
-            <p>Маркетинг</p>
+            <a href="">
+              <img src="./images/portfolio/lab.jpg" alt="<Бирка с логотипом>" width="370" />
+              <h2>Проект <span lang="en">LAB</span></h2>
+              <p>Маркетинг</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/growing-business.jpg"
-              alt="Руки на клавиатуре открытого ноутбука"
-              width="370"
-            />
-            <h2 lang="en">Growing Business</h2>
-            <p>Приложение</p>
+            <a href="">
+              <img
+                src="./images/portfolio/growing-business.jpg"
+                alt="Руки на клавиатуре открытого ноутбука"
+                width="370"
+              />
+              <h2 lang="en">Growing Business</h2>
+              <p>Приложение</p>
+            </a>
           </li>
         </ul>
       </section>
