--- a/index.html
+++ b/index.html
@@ -16,30 +16,34 @@
   <body>
     <header>
       <nav>
-        <a href="">WebStudio</a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a href="./index.html" class="link-reset logo"
+          ><span class="logo logo-accent">Web</span>Studio</a
+        >
+        <ul class="ul-reset">
+          <li><a href="" class="link-reset current nav-link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link-reset nav-link">Портфолио</a></li>
+          <li><a href="" class="link-reset nav-link">Контакты</a></li>
         </ul>
       </nav>
 
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="ul-reset">
+        <li>
+          <a href="mailto:info@devstudio.com" class="link-reset contact-link">info@devstudio.com</a>
+        </li>
+        <li><a href="tel:+380961111111" class="link-reset contact-link">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
     <main>
-      <section>
+      <section class="hero">
         <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
       </section>
 
-      <section>
+      <section class="preference">
         <h2>Наши преимущества</h2>
         <!-- Заголовок скроем стилями -->
-        <ul>
+        <ul class="ul-reset">
           <li>
             <h3>Внимание к деталям</h3>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -65,7 +69,7 @@
 
       <section>
         <h2>Чем мы занимаемся</h2>
-        <ul>
+        <ul class="ul-reset">
           <!-- Если эти картинки должны вести на страници с более детальным описанием каждого вида деятельности, то оборачиваем их в ссылки -->
           <li>
             <img src="./images/site.jpg" alt="руки на клавиатуре" width="370" />
@@ -81,31 +85,51 @@
 
       <section>
         <h2>Наша команда</h2>
-        <ul>
+        <ul class="ul-reset">
           <li>
             <a href="">
-              <img src="./images/staff/demyanenko.jpg" alt="Член команды" width="270" />
+              <img
+                src="./images/staff/demyanenko.jpg"
+                alt="Член команды"
+                width="270"
+                class="link-reset"
+              />
               <h3>Игорь Демьяненко</h3>
               <p lang="en">Product Designer</p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./images/staff/repina.jpg" alt="Член команды" width="270" />
+              <img
+                src="./images/staff/repina.jpg"
+                alt="Член команды"
+                width="270"
+                class="link-reset"
+              />
               <h3>Ольга Репина</h3>
               <p lang="en">Frontend Developer</p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./images/staff/tarasov.jpg" alt="Член команды" width="270" />
+              <img
+                src="./images/staff/tarasov.jpg"
+                alt="Член команды"
+                width="270"
+                class="link-reset"
+              />
               <h3>Николай Тарасов</h3>
               <p lang="en">Marketing</p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./images/staff/ermakov.jpg" alt="Член команды" width="270" />
+              <img
+                src="./images/staff/ermakov.jpg"
+                alt="Член команды"
+                width="270"
+                class="link-reset"
+              />
               <h3>Михаил Ермаков</h3>
               <p lang="en">UI Designer</p>
             </a>
@@ -115,11 +139,11 @@
     </main>
 
     <footer>
-      <a href="">WebStudio</a>
+      <a href="" class="link-reset">WebStudio</a>
       <address>
         г. Киев, пр-т Леси Украинки, 26
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:+380991111111">(111) 222-33-44</a>
+        <a href="mailto:info@example.com" class="link-reset">info@example.com</a>
+        <a href="tel:+380991111111" class="link-reset">(111) 222-33-44</a>
       </address>
     </footer>
   </body>
