--- a/portfolio.html
+++ b/portfolio.html
@@ -16,17 +16,21 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a href="./index.html" class="link-reset logo"
+          ><span class="logo logo-accent">Web</span>Studio</a
+        >
+        <ul class="ul-reset">
+          <li><a href="./index.html" class="link-reset nav-link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link-reset current nav-link">Портфолио</a></li>
+          <li><a href="" class="link-reset nav-link">Контакты</a></li>
         </ul>
       </nav>
 
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="ul-reset">
+        <li>
+          <a href="mailto:info@devstudio.com" class="link-reset contact-link">info@devstudio.com</a>
+        </li>
+        <li><a href="tel:+380961111111" class="link-reset contact-link">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
@@ -34,20 +38,21 @@
       <section>
         <h1>Наши проекты</h1>
         <!-- Заголовок скроем стилями -->
-        <ul>
+        <ul class="ul-reset">
           <li><button type="button" href="">Все</button></li>
           <li><button type="button" href="">Веб-сайты</button></li>
           <li><button type="button" href="">Приложения</button></li>
           <li><button type="button" href="">Дизайн</button></li>
           <li><button type="button" href="">Маркетинг</button></li>
         </ul>
-        <ul>
+        <ul class="ul-reset">
           <li>
             <a href=""
               ><img
                 src="./images/portfolio/technokryak.jpg"
                 alt="Экран ноутбука с карточками сотрудников"
                 width="370"
+                class="link-reset"
               />
               <h2>Технокряк</h2>
               <p>Веб-сайт</p>
@@ -59,6 +64,7 @@
                 src="./images/portfolio/new-orlean.jpg"
                 alt="Два баскетболитса с мячем"
                 width="370"
+                class="link-reset"
               />
               <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
               <p>Дизайн</p>
@@ -66,14 +72,24 @@
           </li>
           <li>
             <a href="">
-              <img src="./images/portfolio/seafood.jpg" alt="Постер ресторана" width="370" />
+              <img
+                src="./images/portfolio/seafood.jpg"
+                alt="Постер ресторана"
+                width="370"
+                class="link-reset"
+              />
               <h2>Ресторан <span lang="en">Seafood</span></h2>
               <p>Приложение</p>
             </a>
           </li>
           <li>
             <a href=""
-              ><img src="./images/portfolio/prime.jpg" alt="Наушники" width="370" />
+              ><img
+                src="./images/portfolio/prime.jpg"
+                alt="Наушники"
+                width="370"
+                class="link-reset"
+              />
               <h2>Проект <span lang="en">Prime</span></h2>
               <p>Маркетинг</p>
             </a>
@@ -84,6 +100,7 @@
                 src="./images/portfolio/boxes.jpg"
                 alt="<Белая и оранжевая коробка>"
                 width="370"
+                class="link-reset"
               />
               <h2>Проект <span lang="en">Boxes</span></h2>
               <p>Приложение</p>
@@ -95,6 +112,7 @@
                 src="./images/portfolio/inspiration.jpg"
                 alt="Сайт на экране монитора"
                 width="370"
+                class="link-reset"
               />
               <h2 lang="en">Inspiration has no Borders</h2>
               <p>Веб-сайт</p>
@@ -106,6 +124,7 @@
                 src="./images/portfolio/limited-edition.jpg"
                 alt="Раскрытый журнал"
                 width="370"
+                class="link-reset"
               />
               <h2>Издание <span lang="en">Limited Edition</span></h2>
               <p>Дизайн</p>
@@ -113,7 +132,12 @@
           </li>
           <li>
             <a href="">
-              <img src="./images/portfolio/lab.jpg" alt="<Бирка с логотипом>" width="370" />
+              <img
+                src="./images/portfolio/lab.jpg"
+                alt="<Бирка с логотипом>"
+                width="370"
+                class="link-reset"
+              />
               <h2>Проект <span lang="en">LAB</span></h2>
               <p>Маркетинг</p>
             </a>
@@ -124,6 +148,7 @@
                 src="./images/portfolio/growing-business.jpg"
                 alt="Руки на клавиатуре открытого ноутбука"
                 width="370"
+                class="link-reset"
               />
               <h2 lang="en">Growing Business</h2>
               <p>Приложение</p>
@@ -134,11 +159,11 @@
     </main>
 
     <footer>
-      <a href="">WebStudio</a>
+      <a href="" class="link-reset">WebStudio</a>
       <address>
         г. Киев, пр-т Леси Украинки, 26
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:+380991111111">(111) 222-33-44</a>
+        <a href="mailto:info@example.com" class="link-reset">info@example.com</a>
+        <a href="tel:+380991111111" class="link-reset">(111) 222-33-44</a>
       </address>
     </footer>
   </body>
