--- a/index.html
+++ b/index.html
@@ -36,33 +36,37 @@
 
     <main>
       <section class="hero">
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="btn">Заказать услугу</button>
       </section>
 
-      <section class="preference">
+      <section class="preferences">
         <h2>Наши преимущества</h2>
         <!-- Заголовок скроем стилями -->
         <ul class="ul-reset">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <h3 class="preferences-title">Внимание к деталям</h3>
+            <p class="preferences-descr">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="preferences-title">Пунктуальность</h3>
+            <p class="preferences-descr">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="preferences-title">Планирование</h3>
+            <p class="preferences-descr">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <h3 class="preferences-title">Современные технологии</h3>
+            <p class="preferences-descr">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
