--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="link-reset logo"
+        <a href="./index.html" class="link-reset logo header-logo"
           ><span class="logo logo-accent">Web</span>Studio</a
         >
         <ul class="ul-reset">
@@ -28,9 +28,13 @@
 
       <ul class="ul-reset">
         <li>
-          <a href="mailto:info@devstudio.com" class="link-reset contact-link">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link-reset header-contact-link"
+            >info@devstudio.com</a
+          >
         </li>
-        <li><a href="tel:+380961111111" class="link-reset contact-link">+38 096 111 11 11</a></li>
+        <li>
+          <a href="tel:+380961111111" class="link-reset header-contact-link">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
 
@@ -71,8 +75,8 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Чем мы занимаемся</h2>
+      <section class="services">
+        <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="ul-reset">
           <!-- Если эти картинки должны вести на страници с более детальным описанием каждого вида деятельности, то оборачиваем их в ссылки -->
           <li>
@@ -87,67 +91,49 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Наша команда</h2>
+      <section class="team">
+        <h2 class="section-title">Наша команда</h2>
         <ul class="ul-reset">
           <li>
-            <a href="">
-              <img
-                src="./images/staff/demyanenko.jpg"
-                alt="Член команды"
-                width="270"
-                class="link-reset"
-              />
-              <h3>Игорь Демьяненко</h3>
-              <p lang="en">Product Designer</p>
+            <a href="" class="link-reset">
+              <img src="./images/staff/demyanenko.jpg" alt="Член команды" width="270" />
+              <h3 class="team-subtitle">Игорь Демьяненко</h3>
+              <p lang="en" class="team-descr">Product Designer</p>
             </a>
           </li>
           <li>
-            <a href="">
-              <img
-                src="./images/staff/repina.jpg"
-                alt="Член команды"
-                width="270"
-                class="link-reset"
-              />
-              <h3>Ольга Репина</h3>
-              <p lang="en">Frontend Developer</p>
+            <a href="" class="link-reset">
+              <img src="./images/staff/repina.jpg" alt="Член команды" width="270" />
+              <h3 class="team-subtitle">Ольга Репина</h3>
+              <p lang="en" class="team-descr">Frontend Developer</p>
             </a>
           </li>
           <li>
-            <a href="">
-              <img
-                src="./images/staff/tarasov.jpg"
-                alt="Член команды"
-                width="270"
-                class="link-reset"
-              />
-              <h3>Николай Тарасов</h3>
-              <p lang="en">Marketing</p>
+            <a href="" class="link-reset">
+              <img src="./images/staff/tarasov.jpg" alt="Член команды" width="270" />
+              <h3 class="team-subtitle">Николай Тарасов</h3>
+              <p lang="en" class="team-descr">Marketing</p>
             </a>
           </li>
           <li>
-            <a href="">
-              <img
-                src="./images/staff/ermakov.jpg"
-                alt="Член команды"
-                width="270"
-                class="link-reset"
-              />
-              <h3>Михаил Ермаков</h3>
-              <p lang="en">UI Designer</p>
+            <a href="" class="link-reset">
+              <img src="./images/staff/ermakov.jpg" alt="Член команды" width="270" />
+              <h3 class="team-subtitle">Михаил Ермаков</h3>
+              <p lang="en" class="team-descr">UI Designer</p>
             </a>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="" class="link-reset">WebStudio</a>
-      <address>
+    <footer class="footer">
+      <a href="" class="link-reset logo footer-logo"><span class="logo-accent">Web</span>Studio</a>
+      <address class="footer-contact">
         г. Киев, пр-т Леси Украинки, 26
-        <a href="mailto:info@example.com" class="link-reset">info@example.com</a>
-        <a href="tel:+380991111111" class="link-reset">(111) 222-33-44</a>
+        <a href="mailto:info@example.com" class="link-reset footer-contact-link"
+          >info@example.com</a
+        >
+        <a href="tel:+380991111111" class="link-reset footer-contact-link">(111) 222-33-44</a>
       </address>
     </footer>
   </body>
