--- a/portfolio.html
+++ b/portfolio.html
@@ -16,21 +16,25 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="link-reset logo"
+        <a href="./index.html" class="link-reset logo header-logo"
           ><span class="logo logo-accent">Web</span>Studio</a
         >
         <ul class="ul-reset">
-          <li><a href="./index.html" class="link-reset nav-link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link-reset current nav-link">Портфолио</a></li>
+          <li><a href="" class="link-reset current nav-link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link-reset nav-link">Портфолио</a></li>
           <li><a href="" class="link-reset nav-link">Контакты</a></li>
         </ul>
       </nav>
 
       <ul class="ul-reset">
         <li>
-          <a href="mailto:info@devstudio.com" class="link-reset contact-link">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link-reset header-contact-link"
+            >info@devstudio.com</a
+          >
         </li>
-        <li><a href="tel:+380961111111" class="link-reset contact-link">+38 096 111 11 11</a></li>
+        <li>
+          <a href="tel:+380961111111" class="link-reset header-contact-link">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
 
@@ -47,108 +51,87 @@
         </ul>
         <ul class="ul-reset">
           <li>
-            <a href=""
-              ><img
+            <a href="" class="link-reset">
+              <img
                 src="./images/portfolio/technokryak.jpg"
                 alt="Экран ноутбука с карточками сотрудников"
                 width="370"
-                class="link-reset"
               />
               <h2>Технокряк</h2>
               <p>Веб-сайт</p>
             </a>
           </li>
           <li>
-            <a href=""
-              ><img
+            <a href="" class="link-reset">
+              <img
                 src="./images/portfolio/new-orlean.jpg"
                 alt="Два баскетболитса с мячем"
                 width="370"
-                class="link-reset"
               />
               <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
               <p>Дизайн</p>
             </a>
           </li>
           <li>
-            <a href="">
-              <img
-                src="./images/portfolio/seafood.jpg"
-                alt="Постер ресторана"
-                width="370"
-                class="link-reset"
-              />
+            <a href="" class="link-reset">
+              <img src="./images/portfolio/seafood.jpg" alt="Постер ресторана" width="370" />
               <h2>Ресторан <span lang="en">Seafood</span></h2>
               <p>Приложение</p>
             </a>
           </li>
           <li>
-            <a href=""
-              ><img
-                src="./images/portfolio/prime.jpg"
-                alt="Наушники"
-                width="370"
-                class="link-reset"
-              />
+            <a href="" class="link-reset">
+              <img src="./images/portfolio/prime.jpg" alt="Наушники" width="370" />
               <h2>Проект <span lang="en">Prime</span></h2>
               <p>Маркетинг</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link-reset">
               <img
                 src="./images/portfolio/boxes.jpg"
                 alt="<Белая и оранжевая коробка>"
                 width="370"
-                class="link-reset"
               />
               <h2>Проект <span lang="en">Boxes</span></h2>
               <p>Приложение</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link-reset">
               <img
                 src="./images/portfolio/inspiration.jpg"
                 alt="Сайт на экране монитора"
                 width="370"
-                class="link-reset"
               />
               <h2 lang="en">Inspiration has no Borders</h2>
               <p>Веб-сайт</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link-reset">
               <img
                 src="./images/portfolio/limited-edition.jpg"
                 alt="Раскрытый журнал"
                 width="370"
-                class="link-reset"
               />
               <h2>Издание <span lang="en">Limited Edition</span></h2>
               <p>Дизайн</p>
             </a>
           </li>
           <li>
-            <a href="">
-              <img
-                src="./images/portfolio/lab.jpg"
-                alt="<Бирка с логотипом>"
-                width="370"
-                class="link-reset"
-              />
+            <a href="" class="link-reset">
+              <img src="./images/portfolio/lab.jpg" alt="<Бирка с логотипом>" width="370" />
               <h2>Проект <span lang="en">LAB</span></h2>
               <p>Маркетинг</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link-reset">
               <img
                 src="./images/portfolio/growing-business.jpg"
                 alt="Руки на клавиатуре открытого ноутбука"
                 width="370"
-                class="link-reset"
               />
               <h2 lang="en">Growing Business</h2>
               <p>Приложение</p>
@@ -158,12 +141,14 @@
       </section>
     </main>
 
-    <footer>
-      <a href="" class="link-reset">WebStudio</a>
-      <address>
+    <footer class="footer">
+      <a href="" class="link-reset logo footer-logo"><span class="logo-accent">Web</span>Studio</a>
+      <address class="footer-contact">
         г. Киев, пр-т Леси Украинки, 26
-        <a href="mailto:info@example.com" class="link-reset">info@example.com</a>
-        <a href="tel:+380991111111" class="link-reset">(111) 222-33-44</a>
+        <a href="mailto:info@example.com" class="link-reset footer-contact-link"
+          >info@example.com</a
+        >
+        <a href="tel:+380991111111" class="link-reset footer-contact-link">(111) 222-33-44</a>
       </address>
     </footer>
   </body>
