--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main>
       <section class="hero">
         <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="btn">Заказать услугу</button>
+        <button type="button" class="hero-btn">Заказать услугу</button>
       </section>
 
       <section class="preferences">
