--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@
           ><span class="logo logo-accent">Web</span>Studio</a
         >
         <ul class="ul-reset">
-          <li><a href="" class="link-reset current nav-link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link-reset nav-link">Портфолио</a></li>
+          <li><a href="./index.html" class="link-reset nav-link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link-reset nav-link current">Портфолио</a></li>
           <li><a href="" class="link-reset nav-link">Контакты</a></li>
         </ul>
       </nav>
@@ -39,15 +39,15 @@
     </header>
 
     <main>
-      <section>
-        <h1>Наши проекты</h1>
+      <section class="portfolio">
+        <h1 class="portfolio-title">Наши проекты</h1>
         <!-- Заголовок скроем стилями -->
         <ul class="ul-reset">
-          <li><button type="button" href="">Все</button></li>
-          <li><button type="button" href="">Веб-сайты</button></li>
-          <li><button type="button" href="">Приложения</button></li>
-          <li><button type="button" href="">Дизайн</button></li>
-          <li><button type="button" href="">Маркетинг</button></li>
+          <li><button type="button" class="portfolio-btn">Все</button></li>
+          <li><button type="button" class="portfolio-btn">Веб-сайты</button></li>
+          <li><button type="button" class="portfolio-btn">Приложения</button></li>
+          <li><button type="button" class="portfolio-btn">Дизайн</button></li>
+          <li><button type="button" class="portfolio-btn">Маркетинг</button></li>
         </ul>
         <ul class="ul-reset">
           <li>
@@ -57,8 +57,8 @@
                 alt="Экран ноутбука с карточками сотрудников"
                 width="370"
               />
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
+              <h2 class="portfolio-subtitle">Технокряк</h2>
+              <p class="portfolio-descr">Веб-сайт</p>
             </a>
           </li>
           <li>
@@ -68,22 +68,24 @@
                 alt="Два баскетболитса с мячем"
                 width="370"
               />
-              <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-              <p>Дизайн</p>
+              <h2 class="portfolio-subtitle">
+                Постер <span lang="en">New Orlean vs Golden Star</span>
+              </h2>
+              <p class="portfolio-descr">Дизайн</p>
             </a>
           </li>
           <li>
             <a href="" class="link-reset">
               <img src="./images/portfolio/seafood.jpg" alt="Постер ресторана" width="370" />
-              <h2>Ресторан <span lang="en">Seafood</span></h2>
-              <p>Приложение</p>
+              <h2 class="portfolio-subtitle">Ресторан <span lang="en">Seafood</span></h2>
+              <p class="portfolio-descr">Приложение</p>
             </a>
           </li>
           <li>
             <a href="" class="link-reset">
               <img src="./images/portfolio/prime.jpg" alt="Наушники" width="370" />
-              <h2>Проект <span lang="en">Prime</span></h2>
-              <p>Маркетинг</p>
+              <h2 class="portfolio-subtitle">Проект <span lang="en">Prime</span></h2>
+              <p class="portfolio-descr">Маркетинг</p>
             </a>
           </li>
           <li>
@@ -93,8 +95,8 @@
                 alt="<Белая и оранжевая коробка>"
                 width="370"
               />
-              <h2>Проект <span lang="en">Boxes</span></h2>
-              <p>Приложение</p>
+              <h2 class="portfolio-subtitle">Проект <span lang="en">Boxes</span></h2>
+              <p class="portfolio-descr">Приложение</p>
             </a>
           </li>
           <li>
@@ -104,8 +106,8 @@
                 alt="Сайт на экране монитора"
                 width="370"
               />
-              <h2 lang="en">Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
+              <h2 lang="en" class="portfolio-subtitle">Inspiration has no Borders</h2>
+              <p class="portfolio-descr">Веб-сайт</p>
             </a>
           </li>
           <li>
@@ -115,15 +117,15 @@
                 alt="Раскрытый журнал"
                 width="370"
               />
-              <h2>Издание <span lang="en">Limited Edition</span></h2>
-              <p>Дизайн</p>
+              <h2 class="portfolio-subtitle">Издание <span lang="en">Limited Edition</span></h2>
+              <p class="portfolio-descr">Дизайн</p>
             </a>
           </li>
           <li>
             <a href="" class="link-reset">
               <img src="./images/portfolio/lab.jpg" alt="<Бирка с логотипом>" width="370" />
-              <h2>Проект <span lang="en">LAB</span></h2>
-              <p>Маркетинг</p>
+              <h2 class="portfolio-subtitle">Проект <span lang="en">LAB</span></h2>
+              <p class="portfolio-descr">Маркетинг</p>
             </a>
           </li>
           <li>
@@ -133,8 +135,8 @@
                 alt="Руки на клавиатуре открытого ноутбука"
                 width="370"
               />
-              <h2 lang="en">Growing Business</h2>
-              <p>Приложение</p>
+              <h2 lang="en" class="portfolio-subtitle">Growing Business</h2>
+              <p class="portfolio-descr">Приложение</p>
             </a>
           </li>
         </ul>
